Implemented full API testing in bruno
